# recepify

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  schema.sql
apps/dashboard/: package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/components/: BarChart.tsx  DataTable.tsx  LineChart.tsx  StackedBarChart.tsx  StatCard.tsx
apps/dashboard/app/lib/: supabaseAdmin.ts  (+1 more)
apps/mobile/: App.tsx  app.json  package-lock.json  package.json
apps/mobile/src/: App.tsx
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: import_cache.py  import_instagram.py  import_pinterest.py  import_scan.py  import_tiktok.py  import_utils.py  import_web.py  import_youtube.py  usage_utils.py
backend/scripts/: migrate_media_to_supabase.py
frontend/app/: page.tsx
frontend/app/_components/: figma-experience.tsx
frontend/app/add/: page.tsx
frontend/app/home/: page.tsx
frontend/app/scan/: page.tsx
frontend/components/figma/: BottomNav.tsx  Home.tsx  ImportFromWebsite.tsx  ImportHub.tsx  ImportInbox.tsx  LoginScreen.tsx  MyRecipes.tsx  Profile.tsx  RecipeAssistantChat.tsx  RecipeDetail.tsx  RecipeEdit.tsx  ScanRecipe.tsx  Search.tsx  ShoppingList.tsx
frontend/constants/: recipe-tags.ts
frontend/lib/: api.ts
src/app/components/: PlanAndUsage.tsx  PlanAndUsageMobile.tsx
supabase/: schema.sql  usage_events.sql
supabase/migrations/: 20260111_plan_limits_table.sql  20260111_usage_enforcement.sql
(+68 files in other folders)
