[project]
name = "recipefy-backend"
version = "0.1.0"
description = "FastAPI backend for the Recipefy MVP"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "openai>=1.30.0",
    "yt-dlp>=2024.5.27",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "supabase>=2.6.0"
]

[tool.uv]
package = false
